--- a/helm/blackbox-exporter/values.yaml
+++ b/helm/blackbox-exporter/values.yaml
@@ -93,7 +93,8 @@ readinessProbe:
     path: /health
     port: http
 
-nodeSelector: {}
+nodeSelector:
+  nodegroup: framework
 tolerations: []
 affinity: {}
 
