--- a/helm/kubedepend/templates/metrics-server.yaml
+++ b/helm/kubedepend/templates/metrics-server.yaml
@@ -102,6 +102,7 @@ spec:
           mountPath: /tmp
       nodeSelector:
         kubernetes.io/os: linux
+        nodegroup: framework
 ---
 apiVersion: v1
 kind: Service
