--- a/helm/prometheus/values.yaml
+++ b/helm/prometheus/values.yaml
@@ -155,7 +155,8 @@ alertmanager:
   ## Node labels for alertmanager pod assignment
   ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
   ##
-  nodeSelector: {}
+  nodeSelector:
+    nodegroup: framework
 
   ## Pod affinity
   ##
@@ -756,7 +757,8 @@ server:
   ## Node labels for Prometheus server pod assignment
   ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
   ##
-  nodeSelector: {}
+  nodeSelector:
+    nodegroup: framework
 
   ## Pod affinity
   ##
@@ -1045,7 +1047,8 @@ pushgateway:
   ## Node labels for pushgateway pod assignment
   ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
   ##
-  nodeSelector: {}
+  nodeSelector:
+    nodegroup: framework
 
   ## Annotations to be added to pushgateway pods
   ##
