Add missing nodeSelectors

--- a/helm/prometheus/values.yaml
+++ b/helm/prometheus/values.yaml
@@ -416,7 +416,9 @@ kubeStateMetrics:
 ## kube-state-metrics sub-chart configurable values
 ## Please see https://github.com/helm/charts/tree/master/stable/kube-state-metrics
 ##
-# kube-state-metrics:
+kube-state-metrics:
+  nodeSelector:
+    nodegroup: framework
 
 nodeExporter:
   ## If false, node-exporter will not be installed
