--- a/helm/kubedepend/values.yaml
+++ b/helm/kubedepend/values.yaml
@@ -4,7 +4,7 @@ messaging: activemq
 useHeartbeats: false
 
 kafka:
-  address: kafka-service-0.kafka.svc.cluster.local:9092
+  address: kafka-service-0.kubedepend.svc.cluster.local:9092
 
 hpa:
   metricName: needed-worker-ratio
