--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -362,8 +362,14 @@ pipeline {
                     |PROM_PORT_FW_PID=\$!
                     |kubectl -n measurement-proxy port-forward service/measurement-proxy 8000:80 &
                     |MEAS_PROXY_PORT_FW_PID=\$!
+                    |/bin/bash scripts/portforward-keep-alive.sh 9090 &
+                    |PROM_PW_KEEP_ALIVE_PID=\$!
                     |echo "Running tests"
                     |pipenv run python kubedepend.py --fault-profile=$MEASFaultProfile --min-measurement-count=$MEASMinMeasurementCount --max-measurement-count=$MEASMaxMeasurementCount --target-std=$MEASTargetStd --load-duration=$MEASLoadDuration --cluster-type=$MEASClusterType --locust-user-count=$MEASLocustUserCount --locust-spawn-rate=$MEASLocustSpawnRate --comment=\"$MEASComment\"
+                    |
+                    |kill -9 \$PROM_PW_KEEP_ALIVE_PID
+                    |kill -9 \$PROM_PORT_FW_PID
+                    |kill -9 \$MEAS_PROXY_PORT_FW_PID
                     """.stripMargin('|')
                 }
             }
