--- a/helm/prometheus-adapter/values.yaml
+++ b/helm/prometheus-adapter/values.yaml
@@ -85,7 +85,7 @@ rules:
         matches: ".*"
         as: "needed_worker_ratio_kafka"
       # metricsQuery: sum(1 + org_apache_activemq_Broker_QueueSize{destinationName="jobWorkerQueue"}) / sum(kube_deployment_status_replicas{deployment="kubedepend-worker-depl"})
-      metricsQuery: (1 + abs((kafka_consumergroup_lag_sum{consumergroup="worker",topic="jobWorkerTopic"}) or absent(kafka_consumergroup_lag_sum{consumergroup="worker",topic="jobWorkerTopic"}) - 1) + on(namespace) (( sum by (namespace) (worker_busy_threads{job="worker-pods"} )) or label_replace(vector(0), "namespace", "kubedepend", "", ""))) / on(namespace) (kube_deployment_status_replicas{deployment="kubedepend-worker-depl"})
+      metricsQuery: (1 + (kafka_consumergroup_lag_sum{consumergroup="worker",topic="jobWorkerTopic"} or absent(kafka_consumergroup_lag_sum{consumergroup="worker",topic="jobWorkerTopic"}) - 1) + on(namespace) (( sum by (namespace) (worker_busy_threads{job="worker-pods"} )) or label_replace(vector(0), "namespace", "kubedepend", "", ""))) / on(namespace) (kube_deployment_status_replicas{deployment="kubedepend-worker-depl"})
 
 
 # (1 + sum by (namespace)(worker_busy_threads{job="worker-pods"})) / on(namespace) (kube_deployment_status_replicas{deployment="kubedepend-worker-depl"})
