--- a/helm/kafka-exporter/values.yaml
+++ b/helm/kafka-exporter/values.yaml
@@ -22,6 +22,8 @@ kafkaExporter:
       - kafka-service-0.kubedepend.svc.cluster.local:9092
       - kafka-service-1.kubedepend.svc.cluster.local:9093
       - kafka-service-2.kubedepend.svc.cluster.local:9094
+      - kafka-service-3.kubedepend.svc.cluster.local:9095
+      - kafka-service-4.kubedepend.svc.cluster.local:9096
     version: "2.5.0"
 
   sasl:
