--- a/helm/kafka/templates/zookeeper-service.yaml
+++ b/helm/kafka/templates/zookeeper-service.yaml
@@ -72,3 +72,53 @@ spec:
   selector:
     app: zookeeper
     id: "3"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: zookeeper4
+  labels:
+    app: zookeeper
+    id: "4"
+spec:
+  ports:
+    - name: tcp-client
+      targetPort: tcp-client
+      port: 2181
+      protocol: TCP
+    - name: tcp-follower
+      targetPort: tcp-follower
+      port: 2888
+      protocol: TCP
+    - name: tcp-leader
+      targetPort: tcp-leader
+      port: 3888
+      protocol: TCP
+  selector:
+    app: zookeeper
+    id: "4"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: zookeeper5
+  labels:
+    app: zookeeper
+    id: "5"
+spec:
+  ports:
+    - name: tcp-client
+      targetPort: tcp-client
+      port: 2181
+      protocol: TCP
+    - name: tcp-follower
+      targetPort: tcp-follower
+      port: 2888
+      protocol: TCP
+    - name: tcp-leader
+      targetPort: tcp-leader
+      port: 3888
+      protocol: TCP
+  selector:
+    app: zookeeper
+    id: "5"
